Payments-On-Every-Surface/force-app/main/default/objects/Demo_Stripe_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stripe_Dashboard_Link__c</fullName>
        <label>Stripe Dashboard Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Stripe_Payment_Intent_ID__c</fullName>
        <label>Stripe Payment Intent ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Demo Stripe Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Payment_Type__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Order_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Demo_Payments</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Demo Payments</label>
    </listViews>
    <nameField>
        <label>Demo Stripe Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Stripe Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>