Payments-On-Every-Surface/force-app/main/default/objects/Demo_Stripe_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stripe_Payment_Intent_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>