Payments-On-Every-Surface/force-app/main/default/objects/Demo_Stripe_Payment__c/listViews/Demo_Payments.listView-meta.xml
<ListView>
    <fullName>Demo_Payments</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Demo Payments</label>
</ListView>